// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should render as expected when all items are supposed to be shown 1`] = `
<Fragment>
  <CouponsHint />
  <TaxDisclaimer />
</Fragment>
`;

exports[`<Footer /> should render as expected when no items are supposed to be shown 1`] = `<Fragment />`;

exports[`<Footer /> should render as expected when only the tax disclaimer is supposed to be shown 1`] = `
<Fragment>
  <TaxDisclaimer />
</Fragment>
`;

exports[`<Footer /> should render as expected when only the the coupons hint is supposed to be shown 1`] = `
<Fragment>
  <CouponsHint />
</Fragment>
`;
